cdrom-detect (1.25) UNRELEASED; urgency=low

  * Look for Release file in whatever dists/* directories are on the CD,
    rather than relying on the stable/unstable/etc symlinks. Prefer the name
    listed in /etc/default-release. This was the last thing in d-i to care
    about those symlinks.

 -- Joey Hess <joeyh@debian.org>  Tue, 17 Jul 2007 23:05:58 -0400

cdrom-detect (1.24) unstable; urgency=low

  * Fix ejecting of cdrom in finish-install. It was trying to anna-install
    eject, not eject-udeb. Closes: #433249

 -- Joey Hess <joeyh@debian.org>  Tue, 17 Jul 2007 22:32:02 -0400

cdrom-detect (1.23) unstable; urgency=low

  [ Joey Hess ]
  * Stop installing eject into target. This will now be handled by
    hw-detect version 1.53.
  * Use anna to install eject-udeb, and use that eject in the finish-install
    script instead of running /target/usr/bin/eject. Closes: #418593

  [ Colin Watson ]
  * Copy udev's persistent-cd rules to the target system if possible.

  [ Updated translations ]
  * Punjabi (Gurmukhi) (pa.po) by A S Alam
  * Portuguese (pt.po) by Miguel Figueiredo
  * Romanian (ro.po) by Eddy Petrișor

 -- Frans Pop <fjp@debian.org>  Fri, 06 Jul 2007 00:11:06 +0200

cdrom-detect (1.22) unstable; urgency=low

  [ Joey Hess ]
  * After scanning CDs, scan for things that look like USB floppies to
    list-devices, since these can sometimes really be USB CD drives.
    (Which is probably a udev or kernel bug). Closes: #410006, 418850
  * Needs di-utils 1.48.

 -- Frans Pop <fjp@debian.org>  Thu, 26 Apr 2007 08:08:52 +0200

cdrom-detect (1.21) unstable; urgency=low

  * Multiply menu-item-numbers by 100

  [ Updated translations ]
  * Esperanto (eo.po) by Serge Leblanc
  * Basque (eu.po) by Piarres Beobide
  * Tamil (ta.po) by Dr.T.Vasudevan

 -- Joey Hess <joeyh@debian.org>  Tue, 10 Apr 2007 14:32:43 -0400

cdrom-detect (1.20) unstable; urgency=low

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Malayalam (ml.po) by Praveen A