@@ -1,9 +1,14 @@
 cdrom-detect (1.25) UNRELEASED; urgency=low
 
+  [ Joey Hess ]
   * Look for Release file in whatever dists/* directories are on the CD,
     rather than relying on the stable/unstable/etc symlinks. Prefer the name
     listed in /etc/default-release. This was the last thing in d-i to care
     about those symlinks.
+
+  [ Colin Watson ]
+  * Revert change to copy udev's persistent-cd rules to the target system,
+    as udev-udeb already does this.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 17 Jul 2007 23:05:58 -0400
 
